--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -10,27 +10,16 @@
     color: #137DC5;
 }
 
-.login-button {
-    color: #494949;
-    text-transform: uppercase;
-    text-decoration: none;
-    background: #ffffff;
-    border: 4px solid #494949;
-    display: inline-block;
-    transition: all 0.4s ease 0s;
-    min-width: 10rem;
-    margin: 1rem;
-}
-
 .google-btn {
-    width: 160px;
+    text-align: center;
+    width: 150px;
     height: 42px;
     margin: 1rem;
     background-color: #ef954b;
     border-radius: 2px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
     margin-top: 80px;
-    align-items: center;
+    margin: auto;
 }
     
 .google-btn:hover {
@@ -60,16 +49,18 @@
 }
     
 .btn-text {
-    float: right;
     color: #fff;
     font-size: 14px;
     letter-spacing: 0.2px;
     font-family: "Roboto";
     background-color: #ef852e;
-    width: 80%;
+    width: 95%;
     height: 100%;
     text-align: center;
     align-items: center;
+    /* float: right; */
+    margin-top: 10px;
+    margin-left: 15px;
     }
 
 @media (max-width: 480px) {
