--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
   text-align: center;
-  /* padding: 2% 5%; */
+  padding: 2% 5%;
   background-color: #ddb89b;
 }
 
@@ -36,6 +36,12 @@ input[type="number"] {
   line-height: 20px;
   align-self: center;
   height: 38px;
+}
+
+.numberOfEvents > .noe-input {
+  width: 120px;
+  text-align: left;
+  
 }
 
 .city {
